correzioni views moduli

--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Moduli</h2>
-
+<h2>Moduli</h2><hr/>
+ <div class="panel panel-default col-lg-10">
 <table class="table">
     <thead>
         <tr>
@@ -48,3 +48,4 @@
 }
     </tbody>
 </table>
+</div>
