--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{ ViewData["Title"] = "Home"; }
+@model webmva.Models.Progetto
 
 <div class="col-md-2 sidebar">
     <div class="row">
@@ -176,7 +177,7 @@
 
                 <h3 class="modal-title" id="lineModalLabel">
                     <strong>
-                        <p name="Progetto">Nuovo Progetto</strong>
+                        <p name="Progetto">Nuovo Progetto  @Html.DisplayFor(model => model.Nome)</strong>
                 </h3>
             </div>
             <div class="modal-body">
