--- a/Views/Modulo/Delete.cshtml
+++ b/Views/Modulo/Delete.cshtml
@@ -1,45 +1,45 @@
-@model webmva.Models.Modulo
+@model webmva.Models.Modulo 
+@{ ViewData["Title"] = "Delete"; }
 
-@{
-    ViewData["Title"] = "Delete";
-}
+<!--<h2>Cancella  @Html.DisplayFor(model => model.Nome)</h2>-->
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Modulo</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Comando)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Comando)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Tipo)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Applicazione)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Applicazione)
-        </dd>
-    </dl>
-    
+<h3>Sei sicuro di voler cancellare @Html.DisplayFor(model => model.Nome)?</h3>
+<hr />
+<div class="col-md-7">
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="panel panel-default col-md-10">
+            <div class="container">
+                <div class="form-group">
+                    <div class="col-md-7">
+                        <!--vedere l'elenco puntato-->
+                        <dl class="dl-horizontal">
+                            <div class="panel-body">
+                                <dt>
+                                    <strong> Nome : </strong>
+                                </dt>
+                                <dd>
+                                    @Html.DisplayFor(model => model.Nome)
+                                </dd>
+                            </div>
+                            <div class="panel-body">
+                                <dt>
+                                    <strong> Comando : </strong>
+                                </dt>
+                                <dd>
+                                    @Html.DisplayFor(model => model.Comando)
+                                </dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+                <div class="col-xs-6  text-right">
+                    <div class="form-group">
+                        <input type="submit" value="Delete" class="btn btn-default" /> |
+                        <a asp-action="Index">Back to List</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </form>
 </div>
