--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -25,7 +25,7 @@
                 
                 <div class="col-md-9 text-right">
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Save" class="btn btn-default" /> |
                         <a asp-action="Index">Back to List</a>
                     </div>
                 </div>
