inserimento pagina per la creazione di un nuovo progetto, icreazione pagina report

--- a/Views/Modulo/Details.cshtml
+++ b/Views/Modulo/Details.cshtml
@@ -1,5 +1,5 @@
 @model webmva.Models.Modulo 
-@{ ViewData["Title"] = "Details"; }
+@{ ViewData["Title"] = "Dettagli"; }
 
 <h2>Dettagli @Html.DisplayFor(model => model.Nome)
 </h2>
