--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -1,5 +1,5 @@
 @model webmva.Models.Modulo 
-@{ ViewData["Title"] = "Create"; }
+@{ ViewData["Title"] = "Crea modulo"; }
 <div class="col-md-2 sidebar">
     <div class="row">
         <!-- uncomment code for absolute positioning tweek see top comment in css -->
