--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -1,27 +1,43 @@
-@model webmva.Models.Progetto
+@model webmva.Models.Progetto 
+@{ ViewData["Title"] = "Delete"; }
 
-@{
-    ViewData["Title"] = "Delete";
-}
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Progetto</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-    </dl>
-    
+<h3>Sei sicuro di voler cancellare @Html.DisplayFor(model => model.Nome)?</h3>
+<hr/>
+<div class="col-md-8 col-md-offset-2">
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="panel panel-default col-md-10">
+            <div class="container">
+                <div class="form-group">
+                    <div class="col-md-7">
+                        <dl class="dl-horizontal"><br>
+                            <dt>
+                                    <strong> Nome : </strong>
+                            </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Nome)
+                            </dd>
+                            <dt>
+                                    <strong> Data : </strong>
+                            </dt>
+                            <dt>
+                                    <strong> Codice : </strong>
+                            </dt>
+                            <dt>
+                                    <strong> Descrizione : </strong>
+                            </dt>
+                        </dl>
+                    </div>
+                    <div class="col-xs-6  text-right">
+                        <div class="form-group">
+                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                            <a asp-action="Index">Back to List</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
