--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -1,31 +1,27 @@
-@model webmva.Models.Progetto
-
-@{
-    ViewData["Title"] = "Edit";
-}
-
-<h2>Edit</h2>
-
-<h4>Progetto</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+@model webmva.Models.Progetto 
+@{ ViewData["Title"] = "Edit"; }
+<div class="container">
+    <h2>Modifica Progetto</h2>
+    <hr />
+    <div class="row panel panel-default col-md-9">
+        <!--<div class="col-md-9">-->
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
-            <div class="form-group">
+            <div class="form-group"><br>
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <span asp-validation-for="Nome" class="text-danger"></span><br>
+                <label for="descrizione">Descrizione</label>
+                <textarea class="form-control" id="descrizione" placeholder="descrizione del progetto" rows="5" cols="40" style="resize:none"
+                    maxlength="1000"></textarea>
             </div>
-            <div class="form-group">
+            <div class="form-group col-sm-6 ">
                 <input type="submit" value="Save" class="btn btn-default" />
+
             </div>
+                <div class="form-group col-sm-6 text-right">
+                    <a asp-action="Index">Back to List</a>
+                </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
