--- a/Views/Progetto/Index.cshtml
+++ b/Views/Progetto/Index.cshtml
@@ -1,35 +1,43 @@
 @model IEnumerable<webmva.Models.Progetto>
 
-@{
-    ViewData["Title"] = "Index";
-}
+    @{ ViewData["Title"] = "Progetti"; }
+    <div class="container">
+        <h2>Progetti</h2>
+        <p class="lead">
+            I progetti presenti sono questi! Per creare un nuovo progetto <a data-toggle="modal" data-target="Progetto/Create">clicca qui </a>!
+        </p>
+        <!--rivedere-->
+        <hr />
+            <div class="panel panel-default col-md-7 col-md-offset-1">
+                <table class="table">
+                    <div class="method">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Nome)
+                                </th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                    </div>
+                    <tbody>
+                        @foreach (var item in Model) {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Nome)
+                            </td>
 
-<h2>Index</h2>
+                            <td>
+                                <div class="col-sm-7 col-sm-offset-4">
+                                    <a asp-action="Edit" asp-route-id="@item.ID">Modifica </a> |
+                                    <a asp-action="Details" asp-route-id="@item.ID">Dettagli </a> |
+                                    <a asp-action="Delete" asp-route-id="@item.ID">Cancella </a>
+                                </div>
+                            </td>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nome)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
